--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: gestionreservas
     env: java
+    rootDir: backend
     buildCommand: |
       apt-get update
       apt-get install -y python3 python3-pip
