--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     buildCommand: |
       apt-get update
       apt-get install -y python3 python3-pip
-      pip3 install -r requirements.txt
+      pip3 install -r backend/requirements.txt
       ./mvnw clean install
     startCommand: "java -jar target/reservas-0.0.1-SNAPSHOT.jar"
     envVars:
