--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,9 @@
 services:
   - type: web
     name: gestionreservas
-    env: java
+    env: docker
     rootDir: backend
-    buildCommand: |
-      apt-get update
-      apt-get install -y python3 python3-pip
-      pip3 install -r backend/requirements.txt
-      ./mvnw clean install
-    startCommand: "java -jar target/reservas-0.0.1-SNAPSHOT.jar"
+    plan: free
     envVars:
       - key: SPRING_PROFILES_ACTIVE
         value: prod
