--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,8 +1,8 @@
 spring.application.name=reserva
 
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
+spring.datasource.url=jdbc:postgresql://dpg-d0h4ra15pdvs7388d9ug-a:5432/reservas_g2gc
+spring.datasource.username=admin
+spring.datasource.password=NIF1uDCQv0kb8WPXv29o4eUF4FyZbziC
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -11,7 +11,7 @@ spring.jpa.show-sql=true
 
 server.port=8080
 
-jwt.secret=${JWT_SECRET}
+jwt.secret=NzByJioqcExtTiQ5OHdYayFadFF2MyNGZ1I5KlZjQm5N
 jwt.expiration=3600000
 
 upload.dir=uploads
