--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -15,3 +15,4 @@ jwt.secret=NzByJioqcExtTiQ5OHdYayFadFF2MyNGZ1I5KlZjQm5N
 jwt.expiration=3600000
 
 upload.dir=uploads
+logging.level.org.springframework.core.env=DEBUG
