--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -2,10 +2,10 @@ spring.application.name=reserva
 
 spring.datasource.url=jdbc:postgresql://dpg-d0h4ra15pdvs7388d9ug-a:5432/reservas_g2gc
 spring.datasource.username=admin
-spring.datasource.password=NIFIuDCQvOkb8WPXv29o4eUF4FyZbziC
+spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
