--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 spring.application.name=reserva
 
-spring.datasource.url=jdbc:postgresql://dpg-d0h4ra15pdvs7388d9ug-a:5432/reservas_g2gc
+spring.datasource.url=${DB_URL}
 spring.datasource.username=admin
 spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
