--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 spring.application.name=reserva
 
 spring.datasource.url=${DB_URL}
-spring.datasource.username=admin
+spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
@@ -11,8 +11,7 @@ spring.jpa.show-sql=true
 
 server.port=8080
 
-jwt.secret=NzByJioqcExtTiQ5OHdYayFadFF2MyNGZ1I5KlZjQm5N
+jwt.secret=${JWT_SECRET}
 jwt.expiration=3600000
 
 upload.dir=uploads
-logging.level.org.springframework.core.env=DEBUG
