--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,10 @@
     "@angular/platform-server": "^19.2.10",
     "@angular/router": "^19.2.10",
     "@angular/ssr": "^19.2.10",
+    "@fullcalendar/angular": "^6.1.17",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
+    "@fullcalendar/timegrid": "^6.1.17",
     "@stomp/stompjs": "^7.1.1",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
