--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -20,6 +20,7 @@ google.client.id=${GOOGLE_CLIENT_ID}
 google.client.secret=${GOOGLE_CLIENT_SECRET}
 google.redirect.uri=${GOOGLE_REDIRECT_URI}
 google.scope=${GOOGLE_SCOPE}
+google.application.name=${GOOGLE_APPLICATION_NAME}
 
 python.db.host=${PYTHON_DB_HOST}
 python.db.port=${PYTHON_DB_PORT}
