se modifica la imagen de docker

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,7 +10,7 @@ COPY . .
 # Instalar Python y dependencias para compilar scripts si es necesario en esta etapa
 RUN apt-get update && \
     apt-get install -y python3 python3-pip && \
-    pip3 install -r ml/requirements_postgresql.txt
+    pip3 install --break-system-packages -r ml/requirements_postgresql.txt
 
 # Dar permisos al wrapper de Maven
 RUN chmod +x mvnw
@@ -33,12 +33,11 @@ WORKDIR /app
 COPY --from=build /app/target/reservas-0.0.1-SNAPSHOT.jar app.jar
 COPY --from=build /app/ml ml
 
-# 🔧 Instalar dependencias Python necesarias en producción
-RUN pip3 install -r ml/requirements_postgresql.txt
+# 🔧 Instalar dependencias Python necesarias en producción (con opción segura)
+RUN pip3 install --break-system-packages -r ml/requirements_postgresql.txt
 
 # Exponer el puerto de la app
 EXPOSE 8080
 
 # Comando para ejecutar Spring Boot
 CMD ["java", "-jar", "app.jar"]
-
