se modifica la imagen de docker

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,9 +7,10 @@ WORKDIR /app
 # Copiar el código fuente
 COPY . .
 
-# Instalar Python y dependencias para compilar scripts si es necesario en esta etapa
+# Instalar Python y actualizar pip en la etapa de build
 RUN apt-get update && \
     apt-get install -y python3 python3-pip && \
+    python3 -m pip install --upgrade pip && \
     pip3 install --break-system-packages -r ml/requirements_postgresql.txt
 
 # Dar permisos al wrapper de Maven
@@ -21,10 +22,11 @@ RUN ./mvnw clean install -DskipTests
 # Etapa de ejecución (final)
 FROM eclipse-temurin:17-jdk
 
-# Instalar Python en la imagen final
+# Instalar Python y actualizar pip en la imagen final
 RUN apt-get update && \
     apt-get install -y python3 python3-pip && \
-    ln -s /usr/bin/python3 /usr/bin/python
+    ln -s /usr/bin/python3 /usr/bin/python && \
+    python3 -m pip install --upgrade pip
 
 # Crear directorio de trabajo
 WORKDIR /app
@@ -33,7 +35,7 @@ WORKDIR /app
 COPY --from=build /app/target/reservas-0.0.1-SNAPSHOT.jar app.jar
 COPY --from=build /app/ml ml
 
-# 🔧 Instalar dependencias Python necesarias en producción (con opción segura)
+# 🔧 Instalar dependencias Python necesarias en producción
 RUN pip3 install --break-system-packages -r ml/requirements_postgresql.txt
 
 # Exponer el puerto de la app
@@ -41,3 +43,4 @@ EXPOSE 8080
 
 # Comando para ejecutar Spring Boot
 CMD ["java", "-jar", "app.jar"]
+
