--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,11 +7,13 @@ WORKDIR /app
 # Copiar el código fuente
 COPY . .
 
-# Instalar Python, actualizar pip y dependencias
+# Instalar Python y pip manualmente desde get-pip.py
 RUN apt-get update && \
-    apt-get install -y python3 python3-pip && \
-    python3 -m pip install --upgrade pip --break-system-packages && \
-    pip3 install --break-system-packages -r ml/requirements_postgresql.txt
+    apt-get install -y python3 curl && \
+    curl -sS https://bootstrap.pypa.io/get-pip.py | python3
+
+# Instalar dependencias de Python
+RUN pip install -r ml/requirements_postgresql.txt
 
 # Dar permisos al wrapper de Maven
 RUN chmod +x mvnw
@@ -22,11 +24,10 @@ RUN ./mvnw clean install -DskipTests
 # Etapa de ejecución (final)
 FROM eclipse-temurin:17-jdk
 
-# Instalar Python en la imagen final, actualizar pip y dependencias
+# Instalar Python y pip manualmente en la imagen final
 RUN apt-get update && \
-    apt-get install -y python3 python3-pip && \
-    ln -s /usr/bin/python3 /usr/bin/python && \
-    python3 -m pip install --upgrade pip --break-system-packages
+    apt-get install -y python3 curl && \
+    curl -sS https://bootstrap.pypa.io/get-pip.py | python3
 
 # Crear directorio de trabajo
 WORKDIR /app
@@ -35,13 +36,11 @@ WORKDIR /app
 COPY --from=build /app/target/reservas-0.0.1-SNAPSHOT.jar app.jar
 COPY --from=build /app/ml ml
 
-# Instalar dependencias necesarias para ejecutar los scripts Python
-RUN pip3 install --break-system-packages -r ml/requirements_postgresql.txt
+# Instalar dependencias de Python
+RUN pip install -r ml/requirements_postgresql.txt
 
-# Exponer el puerto
+# Exponer el puerto de la aplicación
 EXPOSE 8080
 
 # Comando para ejecutar Spring Boot
 CMD ["java", "-jar", "app.jar"]
-
-
