se modifica la imagen de docker

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,10 +7,12 @@ WORKDIR /app
 # Copiar el código fuente
 COPY . .
 
-# Instalar Python y pip manualmente desde get-pip.py
+# Instalar Python, wget y pip manualmente desde get-pip.py
 RUN apt-get update && \
-    apt-get install -y python3 curl && \
-    curl -sS https://bootstrap.pypa.io/get-pip.py | python3
+    apt-get install -y python3 python3-pip wget && \
+    wget https://bootstrap.pypa.io/get-pip.py && \
+    python3 get-pip.py && \
+    rm get-pip.py
 
 # Instalar dependencias de Python
 RUN pip install -r ml/requirements_postgresql.txt
@@ -24,10 +26,12 @@ RUN ./mvnw clean install -DskipTests
 # Etapa de ejecución (final)
 FROM eclipse-temurin:17-jdk
 
-# Instalar Python y pip manualmente en la imagen final
+# Instalar Python, wget y pip manualmente en la imagen final
 RUN apt-get update && \
-    apt-get install -y python3 curl && \
-    curl -sS https://bootstrap.pypa.io/get-pip.py | python3
+    apt-get install -y python3 python3-pip wget && \
+    wget https://bootstrap.pypa.io/get-pip.py && \
+    python3 get-pip.py && \
+    rm get-pip.py
 
 # Crear directorio de trabajo
 WORKDIR /app
@@ -36,7 +40,7 @@ WORKDIR /app
 COPY --from=build /app/target/reservas-0.0.1-SNAPSHOT.jar app.jar
 COPY --from=build /app/ml ml
 
-# Instalar dependencias de Python
+# Instalar dependencias de Python en la imagen final
 RUN pip install -r ml/requirements_postgresql.txt
 
 # Exponer el puerto de la aplicación
