se modifica la imagen de docker

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -31,3 +31,5 @@ python.db.password=${PYTHON_DB_PASSWORD}
 python.script.modelo=ml/modelo_recomendador_postgresql.py
 python.script.predictor=ml/predictor_postgresql.py
 
+python.executable=/opt/venv/bin/python
+
