se modifica la imagen de docker

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,3 +1,4 @@
+
 # Etapa de construcción
 FROM maven:3.9.6-eclipse-temurin-17 AS build
 
@@ -5,17 +6,17 @@ WORKDIR /app
 
 COPY . .
 
-# Instalar Python, venv y pip
+# Instalar Python, venv y pip en etapa de build
 RUN apt-get update && \
     apt-get install -y python3 python3-pip python3-venv && \
     python3 -m venv /opt/venv && \
     /opt/venv/bin/pip install --upgrade pip && \
     /opt/venv/bin/pip install --no-cache-dir -r ml/requirements_postgresql.txt
 
-RUN chmod +x mvnw && \
-    ./mvnw clean install -DskipTests
+# Construir aplicación Java
+RUN chmod +x mvnw && ./mvnw clean install -DskipTests
 
-# Etapa de ejecución
+# Etapa de ejecución (final)
 FROM eclipse-temurin:17-jdk
 
 WORKDIR /app
@@ -24,19 +25,18 @@ WORKDIR /app
 RUN apt-get update && \
     apt-get install -y python3 python3-pip python3-venv
 
-# Crear entorno virtual en imagen final
-RUN python3 -m venv /opt/venv
-
-# Copiar app y entorno virtual
-COPY --from=build /app/target/reservas-0.0.1-SNAPSHOT.jar app.jar
-COPY --from=build /app/ml ml
+# Copiar entorno virtual completo desde la etapa de build
 COPY --from=build /opt/venv /opt/venv
 
-# Asegurar que se use el pip del entorno virtual
+# Copiar la aplicación y scripts Python
+COPY --from=build /app/target/reservas-0.0.1-SNAPSHOT.jar app.jar
+COPY --from=build /app/ml ml
+
+# Activar el entorno virtual como PATH por defecto
 ENV PATH="/opt/venv/bin:$PATH"
 
 # Exponer puerto
 EXPOSE 8080
 
-# Ejecutar Spring Boot
+# Comando para iniciar Spring Boot
 CMD ["java", "-jar", "app.jar"]
