se modifica la imagen de docker

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,45 +1,37 @@
-
 # Etapa de construcción
 FROM maven:3.9.6-eclipse-temurin-17 AS build
 
 WORKDIR /app
-
 COPY . .
 
-# Instalar Python, venv y pip en etapa de build
-RUN apt-get update && \
-    apt-get install -y python3 python3-pip python3-venv && \
-    python3 -m venv /opt/venv && \
-    /opt/venv/bin/pip install --upgrade pip && \
-    /opt/venv/bin/pip install --no-cache-dir -r ml/requirements_postgresql.txt
-
-# Construir aplicación Java
+# Solo construimos la app Java
 RUN chmod +x mvnw && ./mvnw clean install -DskipTests
 
-# Etapa de ejecución (final)
+
+# Etapa de ejecución final
 FROM eclipse-temurin:17-jdk
 
 WORKDIR /app
 
-# Instalar Python, venv y pip
+# Instalar Python, venv y pip directamente aquí
 RUN apt-get update && \
-    apt-get install -y python3 python3-pip python3-venv
+    apt-get install -y python3 python3-pip python3-venv && \
+    python3 -m venv /opt/venv && \
+    /opt/venv/bin/pip install --upgrade pip
 
-# Copiar entorno virtual completo desde la etapa de build
-COPY --from=build /opt/venv /opt/venv
-
-# Copiar la aplicación y scripts Python
+# Copiar solo lo necesario
 COPY --from=build /app/target/reservas-0.0.1-SNAPSHOT.jar app.jar
 COPY --from=build /app/ml ml
 
-# Activar el entorno virtual como PATH por defecto
+# Instalar dependencias Python en esta imagen
+RUN /opt/venv/bin/pip install --no-cache-dir -r ml/requirements_postgresql.txt
+
+# Activar entorno virtual como default
 ENV PATH="/opt/venv/bin:$PATH"
 
-# 👉 Verificación de que pandas está instalado
-RUN /opt/venv/bin/python -c "import pandas; print('Pandas instalado, versión:', pandas.__version__)"
+# (Opcional) Verificar que pandas está instalado
+# RUN python -c "import pandas; print('✅ Pandas:', pandas.__version__)"
 
-# Exponer puerto
 EXPOSE 8080
 
-# Comando para iniciar Spring Boot
 CMD ["java", "-jar", "app.jar"]
